# oxidata

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: bench_blob_vs_pickle.py  bench_dataloader_source_pipeline.py  bench_dataloader_spawn_memory.py  bench_end_to_end_streaming.py  bench_native_ringbuffer.py  bench_payload_matrix.py  bench_slotring_vs_mpqueue.py  bench_spawn_soa_vs_pickle.py
docs/: substrate_and_data_paths.md
examples/: dataloader_api_example.py  dataloader_array_example.py  dataloader_blob_example.py  dataloader_like_handles.py  dataloader_tensor_tree_example.py  native_ringbuffer_pipeline.py  native_shm_copy.py  soa_spawn_workers.py  torch_oxidata_index_dataset.py
oxidata/: __init__.py  blob_codec.py  dataloader.py  effects.py  lifetimes.py  memory.py  mp.py  native.py  offheap.py  scopes.py  shm_arena.py  soa.py  torch_stage.py
oxidata_native/: pyproject.toml
oxideflow/: __init__.py  scopes.py
pyocaml/: blob_codec.py  core.py  dataloader.py  effects.py  lifetimes.py  memory.py  mp.py  native.py  offheap.py  shm_arena.py  soa.py
pyocaml_native/: Cargo.toml  pyproject.toml
tests/: test_blob_codec.py  test_dataloader_api.py  test_dataloader_blob.py  test_dataloader_spawn_callbacks.py  test_dataloader_tensor_tree.py  test_effects.py  test_lifetimes.py  test_multiprocessing_handles.py  test_native.py  test_native_handle_ringbuffer.py  test_native_ringbuffer.py  test_native_shm.py  test_offheap_borrowing.py  test_shm_arena.py  test_shm_lifecycle.py  test_soa.py  test_torch_stage.py
usecases/: 01_scoped_frames.py  (+6 more)
(+2 files in other folders)
