[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oxidata"
version = "0.1.0"
description = "Off-heap lifetimes, borrowing, and zero-copy multiprocessing pipelines for Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Anooj Patel" }]
license = { text = "MIT" }

dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.23"]
msgspec = ["msgspec>=0.18"]
dev = ["maturin>=1.5,<2.0"]

[tool.uv]
dev-dependencies = ["maturin>=1.5,<2.0", "numpy>=1.23", "msgspec>=0.18"]

[tool.setuptools]
packages = ["pyocaml", "oxideflow", "oxidata"]
